--- a/footer.html
+++ b/footer.html
@@ -12,9 +12,9 @@
 <div class="footer__col">
     <span class="footer__col-label">যোগাযোগ</span>
     <div class="footer-contact"><p>জাতীয় আদিবাসী পরিষদ<br>
-<strong>ঠিকানা: ঢাকা বাংলাদেশ</strong><br>
-<strong>ফোন নম্বর: +88 017xxxxxxxx</strong><br>
-<strong>ইমেল: jap.info@jap.org</strong></p>
+<strong>ঠিকানা: কেন্দ্রীয় কমিটি: গণকপাড়া, রাজশাহী -৬১০০</strong><br>
+<strong>মোবাইল নম্বর: +88 01719-022761, +88 01718-874506</strong><br>
+<strong>ইমেল: jap3s1993@gmail.com</strong></p>
 </div>
 </div>
 
